--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     color: black;
 }
 h3{
@@ -21,5 +21,11 @@ h3{
        border-radius: 50%;
     }
 .hero-button:disabled{
+    
+} */
+
+.item:first-child(first-child){
+    border: 2px solid orange;
+    margin button
     
 }
